--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 
 body {
-    background-image: linear-gradient(90deg, #2b2b2b, #a8a8a8, #2b2b2b);
+    background-image: linear-gradient(90deg, #111111, #252525, #111111);
 }
 
 .hero_name {
@@ -38,8 +38,8 @@ body {
   background-color: black;
   width: 45px;
   height: 45px;
-  border-color: goldenrod;
-  border-width: 2px;
+  border-color: rgb(131, 0, 0);
+  border-width: 3px;
   border-style: solid;
   border-radius: 2.5px;
   text-align: center;
@@ -61,7 +61,7 @@ body {
 
 .abilities_bar {
   position: absolute;
-  bottom: 15px;
+  bottom: 25px;
   width: 90%;
   overflow: hidden;
 
@@ -76,27 +76,27 @@ body {
 
 .card_container {
   display: inline-block;
-  margin-right: 20px;
-  margin-left: 20px;
   overflow: visible;
   position: absolute;
   transition-property: transform left right;
   transition-duration: .19s;
-  height: 408px;
+  height: 420px;
   width: 288px;
 }
 
 
 .card {
   width: 288px;
-  height:408px;
+  height:420px;
   position: absolute;
   background-color: black; 
-  border-width: thick;
-  border-style: solid;
   overflow: hidden;
   border-radius: 3.5%;
 
+  /*
+  border-style: solid;
+  border-width:thick;
+  */
   display: flex;
   align-content: center;
 
@@ -107,102 +107,93 @@ body {
 }
 
 #left6 {
-  transform-origin:center right;
-  transform: rotateY(50deg) scale(0.55);
-  left: 2%;
+  transform: rotateY(75deg) scale(0.7);
+  left: 1%;
   z-index: -6;
 }
 
 #left5 {
-  transform-origin:center right;
-  transform: rotateY(50deg) scale(0.55);
-  left: 3.5%;
+  transform: rotateY(75deg) scale(0.7);
+  left: 2%;
   z-index: -5;
 }
 
 #left4 {
-  transform-origin:center right;
-  transform: rotateY(40deg) scale(0.65);
-  left: 7%;
+  transform: rotateY(60deg) scale(0.7);
+  left: 5%;
   z-index: -4;
 }
 
 #left3 {
-  transform-origin:center right;
-  transform: rotateY(30deg) scale(0.75);
-  left: 12.5%;
+  transform: rotateY(45deg) scale(0.8);
+  left: 11%;
   z-index: -3;
 }
 
 #left2 {
-  transform-origin:center right;
-  transform: rotateY(20deg) scale(0.8);
-  left: 20%;
+  transform: rotateY(30deg) scale(.9);
+  left: 19.5%;
   z-index: -2;
 }
 
 #left1 {
-  transform-origin:center right;
-  transform: rotateY(10deg) scale(1);
-  left: 30%;
+  transform: scale(1);
+  left: 30.5%;
   z-index: -1;
 }
 
 #right6 {
-  transform-origin:center left;
-  transform: rotateY(50deg) scale(0.55);
-  left: calc(98% - 288px);
+  transform: rotateY(75deg) scale(0.7);
+  left: calc(99% - 288px);
   z-index: -6;
 }
 
 #right5 {
-  transform-origin:center left;
-  transform: rotateY(50deg) scale(0.55);
-  left: calc(96.5% - 288px);
+
+  transform: rotateY(75deg) scale(0.7);
+  left: calc(98% - 288px);
   z-index: -5;
 }
 
 #right4 {
-  transform-origin:center left;
-  transform: rotateY(40deg) scale(0.65);
-  left: calc(93% - 288px);
+  transform: rotateY(60deg) scale(0.7);
+  left: calc(95% - 288px);
   z-index: -4;
 }
 
 #right3 {
-  transform-origin:center left;
-  transform: rotateY(30deg) scale(0.75);
-  left: calc(87.5% - 288px);
-  
+  transform: rotateY(45deg) scale(0.8);
+  left: calc(89% - 288px);
   z-index: -3;
 }
 
 #right2 {
-  transform-origin:center left;
-  transform: rotateY(20deg) scale(0.8);
-  left: calc(80% - 288px);
+  transform: rotateY(30deg) scale(.9);
+  left: calc(80.5% - 288px);
   z-index: -2;
 }
 
 #right1 {
-  transform-origin:center left;
-  transform: rotateY(10deg) scale(1);
-  left: calc(70% - 288px);
+  transform: scale(1);
+  left: calc(69.5% - 288px);
   z-index: -1;
 }
 
 .selected_card {
-  transform: scale(1.25);
+  transform: scale(1.2);
   z-index: 0;
-  left: calc(50% - 145px);
-  
+  left: calc(50% - 144px); 
+  border-color: goldenrod;
+  border-style: solid;
+  border-radius: 4px;
+  border-width: 2px;
 }
 
 .card_outer {
   width:95%;
   height:95%;
   margin: auto;
-  background-image: linear-gradient(115deg, gray, black);
+  background-image: linear-gradient(90deg, rgb(66, 66, 66), rgb(100, 100, 100), rgb(34, 34, 34));
   border-radius: 2%;
   display: flex;
   justify-content: center;
@@ -210,12 +201,12 @@ body {
 
 .card_inner {
   position: absolute;
-  height: 336px;
+  height: 330px;
   width: 240px;
   margin-top: 20px;
-  border: 3px solid rgb(55, 55, 55);
   border-radius: 2%;
   background-image: linear-gradient(140deg, #333, #555 40%);
+  border: 4px solid rgb(0,0,0);
   overflow:hidden;
 }
 
@@ -223,6 +214,7 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
+  border-top: 4px solid rgb(0,0,0);
 }
 
 .hero_image {
@@ -285,7 +277,6 @@ input:focus {
 }
 
 
-
 .hero_card_page {
   display: flex;
   width: 100%;
@@ -303,6 +294,7 @@ input:focus {
   width: 100%;
   overflow: visible;
   position: relative;
+  margin-top: 50px;
 }
 
 
@@ -312,14 +304,14 @@ input:focus {
 
 .filter_bar{
     border-style:ridge;
-    border-color:dimgray;
+    border-color:rgb(10, 10, 10);
     border-width:5px;
     border-top-width: 0px;
   display: flex;
   flex-direction: column;
   position: relative;
   width: 60%;
-  background-color: #112817;
+  background-color: #0f0f0f;
   align-items: center;
   overflow: hidden;
 }
@@ -421,11 +413,12 @@ input:focus {
   margin-top: 5px;
   margin-right: 10px;
   z-index:2;
-  background-color: gray;
+  background-color: rgb(26, 26, 26);
   border-radius: 100%;
   display: flex;
   border-style: solid;
-  border-width: 1.5px;
+  border-width: 5px;
+  border-color: rgb(39, 39, 39);
 }
 
 .main_attribute_image {
